<resources>
    <string name="app_name">Know Bulgaria</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_game_score">Score: </string>
    <string name="top_players">Top Players</string>
    <string name="score_text">Score</string>
    <string name="result">Result</string>
    <string name="hi_score">Hi-Score</string>
    <string name="ranking">Ranking</string>
    <string name="new_hi_score">New</string>
    <!-- Item names -->
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="nickname">Nickname</string>
    <string name="register">Create Account</string>
    <string name="username">Username</string>
    <string name="title_activity_home">home_activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Dialog titles -->
    <string name="dialog_success_title">Success</string>
    <string name="dialog_warning_title">Warning</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_times_up_title">Time\'s Up</string>
    <string name="dialog_warning_log_out_title">Log out</string>
    <!-- Button options -->
    <string name="okay">Okay</string>
    <string name="yesBtn">Yes</string>
    <string name="noBtn">No</string>
    <string name="agreeBtn">Agree</string>
    <string name="disagreeBtn">Disagree</string>
    <string name="registerBtn">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="playBtn">Play</string>
    <string name="continueBtn">Continue</string>
    <!-- Messages -->
    <string name="register_success_msg">"You're registration is complete. Check your email for verification."</string>
    <string name="game_over_msg">Game over</string>
    <string name="dialog_warning_log_out_message">Do you want to log out?</string>
    <!-- Titles -->
    <string name="title_play">Play</string>
    <string name="title_settings">Settings</string>
    <string name="title_friends">Friends</string>
    <string name="title_learn">Learn</string>
    <string name="stop_dialog_stop">Exit</string>
    <string name="stop_dialog_text">Do you wish to stop the game? You will loose your progress.</string>
    <string name="new_high_score_text">New</string>
    <string name="sign_out">Sign Out</string>
    <string name="account">Account</string>
    <string name="update">Update</string>
    <string name="account_settings_title">Account Settings</string>
    <string name="delete">Delete</string>
    <string name="update_success_title">Update Success</string>
    <string name="dialog_update_success_text">You\'ve successfully updated your account.</string>
    <string name="delete_account_success_title">Delete Success</string>
    <string name="delete_account_success_text">You\'ve successfully deleted your account.</string>
    <string name="dialog_update_email_text">You\'ve updated your email. You need to log in again.</string>
    <string name="search">Search</string>
    <string name="exit_title">Exit</string>
    <string name="exit_text">Do you want to close the app?</string>
    <string name="dialog_no_internet_commection_text">No internet connection!</string>
    <string name="retry">Retry</string>
    <string name="no_results_found_message">No results found!</string>
    <string name="select_from_storage">Select from storage</string>
    <string name="use_camera">Use camera</string>
    <string name="options">Options</string>
    <string name="cancel">Cancel</string>
    <!-- learn array -->
    <string-array name="titlesArray">
        <item>Иван Вазов</item>
        <item>Христо Ботев</item>
        <item>Васил Левски</item>
        <item>Мадарския конник</item>
        <item>Морската градина във Варна</item>
        <item>Крушунските водопади</item>
        <item>Крепостта Баба Вида</item>
        <item>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</item>
    </string-array>

</resources>