<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_background" >
        <LinearLayout
            android:id="@+id/accountSettingTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_settings_title"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profilePictureUpdateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@id/accountSettingTextLayout" >
            <androidx.cardview.widget.CardView
                android:id="@+id/profilePicCardView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:visibility="gone">
                <ImageView
                    android:id="@+id/profilePicAccountSettings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>
            <ProgressBar
                android:id="@+id/profilePicProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <EditText
            android:id="@+id/updateEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_input"
            android:hint="@string/email"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/profilePictureUpdateLayout"/>

        <EditText
            android:id="@+id/updateNickname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_input"
            android:hint="@string/nickname"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/updateEmail"/>

        <EditText
            android:id="@+id/updatePassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_input"
            android:hint="@string/password"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/updateNickname"/>

        <LinearLayout
            android:id="@+id/updateBtnLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/updatePassword">
            <Button
                android:id="@+id/updateAccBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/update"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/updateBtnLayout"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deleteAccBtn"
                android:layout_width="100dp"
                android:backgroundTint="@color/colorError"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="100dp">
            <ProgressBar
                android:id="@+id/accountSettingsProgressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>
        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>