<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:background="@drawable/score_textview_border"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessParent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/result"
                    android:textSize="50sp"/>
            </LinearLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="3"
                android:layout_marginTop="210dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/score_text"
                        android:textSize="35sp"
                        android:layout_gravity="start"/>
                    <TextView
                        android:layout_column="3"
                        android:id="@+id/statsScoreTextView"
                        android:textSize="35sp"
                        android:layout_gravity="end" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_column="1"
                        android:text="@string/hi_score"
                        android:textSize="35sp" />
                    <TextView
                        android:id="@+id/statsPersonalBest"
                        android:layout_column="3"
                        android:textSize="35sp"
                        android:layout_gravity="bottom|end" />
                    <ProgressBar
                        android:id="@+id/statsHiScoreProgressBar"
                        android:layout_gravity="top|end"
                        android:layout_column="3" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/continueStatsButton"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/continueBtn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>