<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_marginTop="50dp">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp" >
            <ImageView
                android:id="@+id/profilePictureRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/blank_profile_picture"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controllers.MainActivity"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".controllers.MainActivity"
            android:gravity="center_horizontal">
            <EditText
                android:id="@+id/userEmail"
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:background="@drawable/custom_input"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="274dp" />

            <EditText
                android:id="@+id/userNickname"
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:background="@drawable/custom_input"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                tools:layout_editor_absoluteX="70dp"
                tools:layout_editor_absoluteY="380dp" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                tools:layout_editor_absoluteY="539dp" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:background="@drawable/custom_input"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                tools:layout_editor_absoluteY="629dp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="365dp"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/processRegister"
                android:text="@string/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="150dp">
        <ProgressBar
            android:id="@+id/progressBarRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>