<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controllers.PlayFragment"
    android:background="@drawable/desktop">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp">
        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center">
            <Button
                android:id="@+id/playBtn"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:text="@string/playBtn"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/personalBestHiScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/in_game_score"
            android:textSize="40sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnLayout"/>

        <TextView
            android:id="@+id/personalBestHiScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@id/personalBestHiScoreText"
            app:layout_constraintBottom_toTopOf="@id/btnLayout"/>

        <LinearLayout
            android:id="@+id/topPlayersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_players"
                android:gravity="center"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/topPlayersLayout">
            <TextView
                android:id="@+id/rankingTextView"
                android:layout_width="200dp"
                android:layout_height="275dp"
                android:background="@drawable/score_textview_border"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:textSize="25sp"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/rankingProgressbar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="160dp"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>